Refactor ingestion pipeline and add streaming functionality

--- a/notebooks/ingest_data.ipynb
+++ b/notebooks/ingest_data.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Ingesting Data into Qdrant\n",
-    "This notebook showcases how to use the `gef-ml` package to create the initial vector database with documents from `/data`."
+    "This notebook showcases how to use the `gef-ml` package to create the initial vector database with documents from `/data`.\n",
+    "\n",
+    "This assumes data has already been downloaded into `/data/dumps/`"
    ]
   },
   {
@@ -14,11 +16,61 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.vector_stores.qdrant import QdrantVectorStore\n",
+    "from qdrant_client import QdrantClient\n",
+    "\n",
+    "qdrant_client = QdrantClient(\n",
+    "    location=\"http://localhost:6333\",\n",
+    ")\n",
+    "vector_store = QdrantVectorStore(client=qdrant_client, collection_name=\"temp_collection\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gef_ml.ingestion import get_pipeline\n",
+    "\n",
+    "ingest_pipeline = get_pipeline(vector_store)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the pipeline on a single document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.readers.file import FlatReader\n",
+    "\n",
+    "document = SimpleDirectoryReader()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
