--- a/notebooks/ingest_data.ipynb
+++ b/notebooks/ingest_data.ipynb
@@ -56,9 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.readers.file import FlatReader\n",
-    "\n",
-    "document = SimpleDirectoryReader()"
+    "from llama_index.readers.file import PDFReader"
    ]
   }
  ],
