Refactored code for filtering and cleaning text data

--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -94,58 +94,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
+    "two = []\n",
+    "\n",
     "for node in filtered:\n",
     "    string = \"P147760\"\n",
     "    \n",
     "    if string in node.text:\n",
-    "        print(node.metadata['doc_id'])\n",
-    "        print(node.text)\n",
-    "        print(\"===\")\n",
-    "        print(\"\\n\\n\")"
+    "        two.append(node)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Official Use CURRENCY  EQUIVALENTS   (Exchange  Rate Effective February 17, 2022)    Currency Unit =   Belarusian  Ruble (BYR)  2.55625 BYR = US$1         FISCAL YEAR  July 1 ‐ June 30      ABBREVIATIONS  AND ACRONYMS     AF  Additional  Financing   BFDP  Belarus Forestry Development  Project  BFF  Boiler and Furnace Fuels  CPF  Country Partnership  Framework   ENPV  Economic  Net Present Value  ERR  Economic  Rate of Return  ESMP  Environmental  and Social Management  Plan  EU  European  Union  EX‐ACT  EX‐Ante Carbon‐Balance Tool  FM  Financial Management   FSC  Forest Stewardship  Council  GDP  Gross Domestic  Product  GEF  Global Environment  Facility  GHG  Greenhouse  Gas  GRM  Grievance  Redress Mechanism   IBRD  International  Bank for Reconstruction  and Development   ICR  Implementation  Completion  and Results Report  IRR  Internal Rate of Return  ISR  Implementation  Status and Results Report  M&E  Monitoring  and Evaluation   NPV  Net Present Value  PAD  Project Appraisal  Document   PIU  Project Implementation  Unit  PDO  Project Development  Objective   RBF  Results‐Based Framework   RUE  Republican  Unitary Enterprise   SFE  State Forest Enterprise   SFM  Sustainable  Forest Management   STEP  Systematic  Tracking of Exchanges  in Procurement   TTL  Task Team Leader  ToC  Theory of Change'"
+       "'The World Bank    Forestr y Development Pro ject (P147760 )           Page 57 of 78      control. In Ireland, the cost of reforestation  by planting is reduced by 30 percent where sites have had  their harvest residues removed;  however,  no such savings are calculated  ex post due to lack of local data.  Benefits from Improved  Forest Nursery Capacity and Survival Rates  18. Financial efficiency.  The project financed additional  annual production  capacity of 25.1 million  ‘closed root’ seedlings  with the construction  or rehabilitation  of four nurseries,  which now meet the  highest international  standards.  At appraisal,  10 nurseries  were expected,  and the overall IRR was –17.3  percent. Ex post, the analysis reflects the actual capital outlay on the four nurseries,  cost and revenue  adjustments  to reflect the actual employment  levels in the built nurseries,  the increased  capacity of each  nursery (five times the production  of the nurseries  envisaged  at the ex ante stage). higher seedling prices,  and a 15 percent reduction  in seedling costs due to improved  survival rates. See table 4.2. Error!  Reference  source not found. for amendments  to financial analysis in the nursery investments.    19.'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered[1].text"
+    "two[58].text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaner = TextCleaner()\n",
+    "\n",
+    "cleaned = cleaner(two)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "'page_label: 61\\nfile_name: /home/sawyer/git/gef-ml/notebooks/../data/gef-6/6947/p6947_doc3.pdf\\nfilename: p6947_doc3.pdf\\nextension: .pdf\\nproject_id: 6947\\ndoc_id: 3\\n\\nThe World Bank    Forestr y Development Pro ject (P147760 )           Page 57 of 78      control. In Ireland, the cost of reforestation  by planting is reduced by 30 percent where sites have had  their harvest residues removed;  however,  no such savings are calculated  ex post due to lack of local data.  Benefits from Improved  Forest Nursery Capacity and Survival Rates  18. Financial efficiency.  The project financed additional  annual production  capacity of 25.1 million  ‘closed root’ seedlings  with the construction  or rehabilitation  of four nurseries,  which now meet the  highest international  standards.  At appraisal,  10 nurseries  were expected,  and the overall IRR was –17.3  percent. Ex post, the analysis reflects the actual capital outlay on the four nurseries,  cost and revenue  adjustments  to reflect the actual employment  levels in the built nurseries,  the increased  capacity of each  nursery (five times the production  of the nurseries  envisaged  at the ex ante stage). higher seedling prices,  and a 15 percent reduction  in seedling costs due to improved  survival rates. See table 4.2. Error!  Reference  source not found. for amendments  to financial analysis in the nursery investments.    19.'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "passed"
+    "from llama_index.core.schema import MetadataMode\n",
+    "two[58].get_content(MetadataMode.ALL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-04 18:45:16,310 - httpx - \u001b[32mINFO\u001b[0m - HTTP Request: GET http://localhost:6333/collections/gef_6_512_64 \"HTTP/1.1 200 OK\"\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gef_ml.utils import get_qdrant_vectorstore\n",
+    "\n",
+    "vectorstore = get_qdrant_vectorstore(collection_name=\"gef_6_512_64\")"
    ]
   },
   {
@@ -153,7 +188,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "retriever = vectorstore."
+   ]
   }
  ],
  "metadata": {
